# CVI

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml  slice.py  timing.py
cvi/: cubic_spline.py  main.py  option_chain.py  slice.py
cvi/examples/: example.ipynb  main.py
cvi/examples/data/: 2023-04-14_vol.csv
cvi/fitter/: __init__.py  fitter.py  fitter_options.py
cvi/slice/: __init__.py  cubic_spline.py  node.py  params.py  slice.py
