[project]
name = "cvi"
version = "0.1.0"
description = "Implementation of Convex Volatility Interpolation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.9.2",
    "numpy==2.0.2",
    "scipy>=1.14.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pre-commit>=4.0.1",
    "ruff>=0.7.3",
]
