[project]
name = "cvi"
version = "0.1.0"
description = "Implementation of Convex Volatility Interpolation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "clarabel<=0.10.0",
    "nbformat>=5.10.4",
    "numpy<=2.2.6",
    "pandas<=2.2.3",
    "pandera<=0.21.1",
    "pydantic<=2.11.4",
    "scipy<=1.15.3",
]

[dependency-groups]
dev = [
    "ipykernel<=6.29.5",
    "ruff<=0.11.10",
    "ipywidgets>=8.1.7",
    "plotly>=6.1.2",
]
